# WebNarudzbe

./: .gitignore  app.py  narudzbe.xlsx  pyproject.toml  requirements.txt
templates/: index.html  login.html
