[tool.poetry]
name = "webnarudzbe"
version = "0.1.0"
description = "Aplikacija za narudžbe"
authors = ["Sinisa <sinisa@example.com>"]

[tool.poetry.dependencies]
python = "^3.13"
flask = "3.0.3"
pandas = "2.2.2"
openpyxl = "3.1.5"
gunicorn = "23.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
